--- a/local/src/main/resources/application.conf
+++ b/local/src/main/resources/application.conf
@@ -4,7 +4,7 @@ akka {
     provider = "akka.remote.RemoteActorRefProvider"
    }
    remote {
-     enabled-transport = "akka.remote.netty.tcp"
+     enabled-transport = ["akka.remote.netty.tcp"]
      netty.tcp {
        hostname = "192.168.0.2"
        port = 7890
