--- a/remote/src/main/resources/application.conf
+++ b/remote/src/main/resources/application.conf
@@ -4,7 +4,7 @@ akka {
     provider = "akka.remote.RemoteActorRefProvider"
    }
    remote {
-     transport = "akka.remote.netty.tcp"
+     enabled-transport = ["akka.remote.netty.tcp"]
      netty.tcp {
        hostname = "127.0.0.1"
        port = 7891
