--- a/local/src/main/resources/application.conf
+++ b/local/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 akka {
-  loglevel = "INFO"
+  //loglevel = "INFO"
   actor {
     provider = "akka.remote.RemoteActorRefProvider"
    }
@@ -9,8 +9,8 @@ akka {
        hostname = "192.168.0.2"
        port = 7890
      }
-     log-sent-message = on
-     log-received-messages = on
+     //log-sent-message = on
+     //log-received-messages = on
    }
 }
 
