--- a/remote/src/main/resources/application.conf
+++ b/remote/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 akka {
-  loglevel = "INFO"
+  //loglevel = "INFO"
   actor {
     provider = "akka.remote.RemoteActorRefProvider"
    }
@@ -9,8 +9,8 @@ akka {
        hostname = "127.0.0.1"
        port = 7891
      }
-     log-sent-messages = on
-     log-received-messages = on
+     //log-sent-messages = on
+     //log-received-messages = on
    }
 }
 
